
[project]
name = "geoprob_pipe"
version = "0.1.4"
description = "Execute probabilistic piping calculations using a Deltares probabilic library"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
scipy = "^1.16.1"
pydra-core = "^0.0.9"
geopandas = "^1.1.1"
plotly = "^6.2.0"
openpyxl = "^3.1.5"
kaleido = "^1.0.0"
colorlog = "^6.9.0"
